sfdx-source/nca-watrs/main/objects/NCA_Performance__c/NCA_Performance__c.object-meta.xml
<CustomObject>
    <label>NCA Performance</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NCA Performances</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>