sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/AMAS_ID__c.field-meta.xml
<CustomField>
    <fullName>AMAS_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AMAS ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>