sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Average_Production_Rate__c.field-meta.xml
<CustomField>
    <fullName>Average_Production_Rate__c</fullName>
    <formula>Cases_Completed__c /( Total_Hours_Available__c /8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average Cases Completed Daily</inlineHelpText>
    <label>Average Production Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>