sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Business_Days__c</fullName>
    <formula>IF( Performance_End_Date__c &gt; TODAY(),
(CASE(MOD( Performance_Start_Date__c - DATE(1985,6,24),7),    0 , CASE( MOD( TODAY() - Performance_Start_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),    1 , CASE( MOD( TODAY() - Performance_Start_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),    2 , CASE( MOD( TODAY() - Performance_Start_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),    3 , CASE( MOD( TODAY() - Performance_Start_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),    4 , CASE( MOD( TODAY() - Performance_Start_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),    5 , CASE( MOD( TODAY() - Performance_Start_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),    6 , CASE( MOD( TODAY() - Performance_Start_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),    999)    +    (FLOOR(( TODAY() - Performance_Start_Date__c )/7)*5)),
(CASE(MOD( Performance_Start_Date__c - DATE(1985,6,24),7),    0 , CASE( MOD( Performance_End_Date__c - Performance_Start_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),    1 , CASE( MOD( Performance_End_Date__c - Performance_Start_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),    2 , CASE( MOD( Performance_End_Date__c - Performance_Start_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),    3 , CASE( MOD( Performance_End_Date__c - Performance_Start_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),    4 , CASE( MOD( Performance_End_Date__c - Performance_Start_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),    5 , CASE( MOD( Performance_End_Date__c - Performance_Start_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),    6 , CASE( MOD( Performance_End_Date__c - Performance_Start_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),    999)    +    (FLOOR(( Performance_End_Date__c - Performance_Start_Date__c )/7)*5))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>