sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Cases_Completed__c.field-meta.xml
<CustomField>
    <fullName>Cases_Completed__c</fullName>
    <formula>Markers_Ordered__c +  Denied_Cases__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cases Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>