sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Cases_Established__c.field-meta.xml
<CustomField>
    <fullName>Cases_Established__c</fullName>
    <description>Cases Established</description>
    <label>Cases Established</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>