sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Create_New_Performance__c.field-meta.xml
<CustomField>
    <fullName>Create_New_Performance__c</fullName>
    <formula>IF((Performance_End_Date__c+1 )&lt;= TODAY(), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create New Performance</label>
    <type>Checkbox</type>
</CustomField>