sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Denied_Cases__c.field-meta.xml
<CustomField>
    <fullName>Denied_Cases__c</fullName>
    <label>Denied Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>