sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/DupeEnrty__c.field-meta.xml
<CustomField>
    <fullName>DupeEnrty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DupeEnrty</label>
    <type>Checkbox</type>
</CustomField>