sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>NCA_WATRS_Contact__c</referenceTo>
    <relationshipLabel>NCA Performances</relationshipLabel>
    <relationshipName>NCA_Performances</relationshipName>
    <type>Lookup</type>
</CustomField>