sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Employee_GS_Level__c.field-meta.xml
<CustomField>
    <fullName>Employee_GS_Level__c</fullName>
    <description>Text(Employee_Name__r.NCA_Employee_Grade_Level__c)</description>
    <formula>Text(NCA_Performance_Standard__r.Employee_Grade_Level__c )</formula>
    <label>Employee GS Level</label>
    <type>Text</type>
</CustomField>