sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NCA Performances</relationshipLabel>
    <relationshipName>NCA_Performances1</relationshipName>
    <type>Lookup</type>
</CustomField>