sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Employee_User_Record__c.field-meta.xml
<CustomField>
    <fullName>Employee_User_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee User Record</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NCA_Performances</relationshipName>
    <type>Lookup</type>
</CustomField>