sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <formula>IF( Performance_End_Date__c&lt; DATE(YEAR(TODAY())-1,MONTH(TODAY()),DAY(TODAY()))  , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>