sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Markers_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Markers_Ordered__c</fullName>
    <label>Markers Ordered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>