sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Markers_Ordered_Denied_Cases__c.field-meta.xml
<CustomField>
    <fullName>Markers_Ordered_Denied_Cases__c</fullName>
    <description>Markers_Ordered__c +  Denied_Cases__c</description>
    <formula>Markers_Ordered__c +  Denied_Cases__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Markers Ordered &amp; Denied Cases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>