sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Monthly_Alert_Date__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Alert_Date__c</fullName>
    <formula>DATE(YEAR( Performance_End_Date__c ),(MONTH(Performance_End_Date__c)+1),15)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Alert Date</label>
    <type>Date</type>
</CustomField>