sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/NCA_Performance_Standard__c.field-meta.xml
<CustomField>
    <fullName>NCA_Performance_Standard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCA Performance Standard</label>
    <referenceTo>NCA_Performance_Standard__c</referenceTo>
    <relationshipLabel>NCA Performances</relationshipLabel>
    <relationshipName>NCA_Performances</relationshipName>
    <type>Lookup</type>
</CustomField>