sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Non_Production_Time__c.field-meta.xml
<CustomField>
    <fullName>Non_Production_Time__c</fullName>
    <inlineHelpText>Hours removed from production time (i.e. Leave &amp; Non-Processing Time).</inlineHelpText>
    <label>Non-Production Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>