sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Other_Hours__c.field-meta.xml
<CustomField>
    <fullName>Other_Hours__c</fullName>
    <label>Other Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>