sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Performance_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Performance_Month_Year__c</fullName>
    <formula>CASE(MONTH(Performance_Start_Date__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)
+
&quot; &quot;
+
TEXT(YEAR(  Performance_Start_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Performance Month &amp; Year</label>
    <type>Text</type>
</CustomField>