sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Performance_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Performance_Start_Date__c</fullName>
    <inlineHelpText>Date Format: mm/dd/yyyy</inlineHelpText>
    <label>Performance Start Date</label>
    <type>Date</type>
</CustomField>