sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Premium_Time__c.field-meta.xml
<CustomField>
    <fullName>Premium_Time__c</fullName>
    <label>Premium Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>