sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Production_Rating__c.field-meta.xml
<CustomField>
    <fullName>Production_Rating__c</fullName>
    <formula>IF(Average_Production_Rate__c=0,&quot;N/A&quot;,
IF( Average_Production_Rate__c  &gt;=NCA_Performance_Standard__r.Production_Exceptional__c  ,&quot;Exceptional&quot;,
IF( Average_Production_Rate__c   &lt;=NCA_Performance_Standard__r.Production_Unsuccessful__c ,&quot;Unsuccessful&quot; ,
&quot;Successful&quot;
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Production Rating</label>
    <type>Text</type>
</CustomField>