sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Quality_Error_Report__c.field-meta.xml
<CustomField>
    <fullName>Quality_Error_Report__c</fullName>
    <label>Quality (Error Report)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>