sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Quality_Rating__c.field-meta.xml
<CustomField>
    <fullName>Quality_Rating__c</fullName>
    <formula>IF(Quality_Error_Report__c=0,&quot;N/A&quot;,IF( Quality_Error_Report__c  &gt;=NCA_Performance_Standard__r.Error_Rate_Exceptional__c ,&quot;Exceptional&quot;,
IF(Quality_Error_Report__c &lt;=NCA_Performance_Standard__r.Error_Rate_Unsuccessful__c ,&quot;Unsuccessful&quot; ,
&quot;Successful&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quality Rating</label>
    <type>Text</type>
</CustomField>