sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Return_Letter_Rate__c.field-meta.xml
<CustomField>
    <fullName>Return_Letter_Rate__c</fullName>
    <label>Return Letter Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>