sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Return_Letter_Rating__c.field-meta.xml
<CustomField>
    <fullName>Return_Letter_Rating__c</fullName>
    <formula>IF(Return_Letter_Rate__c=0, &quot;N/A&quot;,IF(  Return_Letter_Rate__c  &gt;= NCA_Performance_Standard__r.Return_Letter_Exceptional__c  ,&quot;Exceptional&quot;,
IF( Return_Letter_Rate__c  &lt;=NCA_Performance_Standard__r.Return_Letter_Unsuccessful__c ,&quot;Unsuccessful&quot; ,&quot;Successful&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Letter Rating</label>
    <type>Text</type>
</CustomField>