sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Returned_Letters__c.field-meta.xml
<CustomField>
    <fullName>Returned_Letters__c</fullName>
    <label>Returned Letters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>