sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Site_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Site_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NCA_Performances1</relationshipName>
    <type>Lookup</type>
</CustomField>