sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Supervisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Supervisor Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NCA Performances</relationshipLabel>
    <relationshipName>NCA_Performances</relationshipName>
    <type>Lookup</type>
</CustomField>