sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Timeliness__c.field-meta.xml
<CustomField>
    <fullName>Timeliness__c</fullName>
    <label>Timeliness</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>