sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Timeliness_Rating__c.field-meta.xml
<CustomField>
    <fullName>Timeliness_Rating__c</fullName>
    <formula>IF(Timeliness__c=0, &quot;N/A&quot;,IF(  Timeliness__c &gt;=NCA_Performance_Standard__r.Timeliness_Exceptional__c ,&quot;Exceptional&quot;,
IF(Timeliness__c  &lt;=NCA_Performance_Standard__r.Timeliness_Unsuccessful__c ,&quot;Unsuccessful&quot; ,
&quot;Successful&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timeliness Rating</label>
    <type>Text</type>
</CustomField>