sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Total_Hours_Available__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Available__c</fullName>
    <formula>Business_Days__c *8 -  Non_Production_Time__c + Premium_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>