sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Total_Leave_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Leave_Hours__c</fullName>
    <label>Total Leave Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>