sfdx-source/nca-watrs/main/objects/NCA_Performance__c/fields/Total_MEL_Letters__c.field-meta.xml
<CustomField>
    <fullName>Total_MEL_Letters__c</fullName>
    <label>Total MEL Letters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>