sfdx-source/nca-watrs/main/objects/NCA_Performance__c/validationRules/Dupe_Performance_Found.validationRule-meta.xml
<ValidationRule>
    <fullName>Dupe_Performance_Found</fullName>
    <active>true</active>
    <errorConditionFormula>DupeEnrty__c</errorConditionFormula>
    <errorMessage>An existing Performance Record for this Employee and Date range has already been entered</errorMessage>
</ValidationRule>