sfdx-source/nca-watrs/main/objects/NCA_Performance__c/validationRules/Return_Letter_Rate_1_Year_Lock.validationRule-meta.xml
<ValidationRule>
    <fullName>Return_Letter_Rate_1_Year_Lock</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Return_Letter_Rate__c ) &amp;&amp;  Locked__c =TRUE</errorConditionFormula>
    <errorDisplayField>Return_Letter_Rate__c</errorDisplayField>
    <errorMessage>Return Letter Rate cannot be changed after a year of closing performance.</errorMessage>
</ValidationRule>