sfdx-source/nca-watrs/main/objects/NCA_Performance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>Performance_Start_Date__c</columns>
    <columns>Performance_End_Date__c</columns>
    <columns>Active__c</columns>
    <columns>Average_Production_Rate__c</columns>
    <columns>Quality_Error_Report__c</columns>
    <columns>Return_Letter_Rate__c</columns>
    <columns>Timeliness__c</columns>
    <columns>Create_New_Performance__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>