sfdx-source/nca-watrs/main/objects/NCA_Performance__c/listViews/Case_Manager_Performance_Fiscal_Year.listView-meta.xml
<ListView>
    <fullName>Case_Manager_Performance_Fiscal_Year</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Average_Production_Rate__c</columns>
    <columns>Return_Letter_Rate__c</columns>
    <columns>Timeliness__c</columns>
    <columns>Quality_Error_Report__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Performance_End_Date__c</field>
        <operation>equals</operation>
        <value>THIS_FISCAL_YEAR</value>
    </filters>
    <label>Case Manager Performance Fiscal Year</label>
</ListView>