sfdx-source/nca-watrs/main/objects/NCA_Performance__c/listViews/This_Month_s_Performances.listView-meta.xml
<ListView>
    <fullName>This_Month_s_Performances</fullName>
    <columns>NAME</columns>
    <columns>Site_Location__c</columns>
    <columns>Employee_Name__c</columns>
    <columns>NCA_Performance_Standard__c</columns>
    <columns>Return_Letter_Rating__c</columns>
    <columns>Quality_Rating__c</columns>
    <columns>Timeliness_Rating__c</columns>
    <columns>Production_Rating__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Performance_End_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>This Month&apos;s Performances</label>
</ListView>